fix Deprecated warning about creating a Double; comment out BKD/Points code failing to compile after LUCENE-9820